Fix position of video progress widget in Safari (right-aligned)

--- a/ova/static/css/imports/video.css
+++ b/ova/static/css/imports/video.css
@@ -21,8 +21,7 @@
   flex-direction: column;
   gap: 1.6rem;
   margin-block: 3.2rem;
-  place-self: end;
-  width: fit-content;
+  width: 100%;
 }
 
 .video-progress-parts {
